[gd_scene load_steps=6 format=4 uid="uid://cvg4bqcj12kf8"]

[ext_resource type="Script" path="res://level_1.gd" id="1_nbty6"]
[ext_resource type="PackedScene" uid="uid://dagkfdenp1qf6" path="res://level_map.tscn" id="2_ms618"]
[ext_resource type="Script" path="res://button_door_1.gd" id="3_btgbj"]

[sub_resource type="Curve2D" id="Curve2D_0s4jp"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -32, 0, 0, 0, 0, 0, 0)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_i4yh0"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 48, 0, 0, 0, 0, 0, 0)
}
point_count = 3

[node name="level_6" type="Node2D"]
position = Vector2(0, -32)
script = ExtResource("1_nbty6")

[node name="LevelMap" parent="." instance=ExtResource("2_ms618")]

[node name="Water" parent="LevelMap" index="1"]
position = Vector2(-15, 142)

[node name="ButtonDoor1" parent="LevelMap" index="2"]
process_mode = 4
visible = false

[node name="Path2D" parent="LevelMap/ButtonDoor1" index="1"]
position = Vector2(0, 416)
curve = SubResource("Curve2D_0s4jp")

[node name="DoorsLocked" parent="LevelMap/ButtonDoor1/Path2D/PathFollow2D" index="0"]
enabled = false

[node name="DoorsUnlocked" parent="LevelMap/ButtonDoor1/Path2D/PathFollow2D" index="1"]
enabled = false

[node name="ButtonDoor2" parent="LevelMap" index="3"]
process_mode = 4
visible = false

[node name="Sprite2D" parent="LevelMap/ButtonDoor2" index="0"]
position = Vector2(456, 362)

[node name="DoorsLocked" parent="LevelMap/ButtonDoor2/Path2D/PathFollow2D" index="0"]
tile_map_data = PackedByteArray("AAAbACAAAAABAAAAAAAbAB8AAAAAAAIAAAAbAB4AAAAAAAIAAAAaACAAAAABAAEAAAAaAB8AAAABAAEAAAAaAB4AAAABAAEAAAAeACAAAAAAAAIAAAAeACEAAAACAAEAAAAdACEAAAABAAIAAAAdACAAAAABAAAAAAAcACAAAAABAAAAAAAcACEAAAABAAIAAAAbACEAAAABAAIAAAAaACEAAAACAAAAAAAaADcAAAAAAAAAAAAaADYAAAAAAAEAAAAaADUAAAAAAAEAAAA=")
enabled = false

[node name="DoorsUnlocked" parent="LevelMap/ButtonDoor2/Path2D/PathFollow2D" index="1"]
tile_map_data = PackedByteArray("AAAbACAAAAABAAAAAAAbAB8AAAAAAAIAAAAbAB4AAAAAAAIAAAAaACAAAAABAAEAAAAaAB8AAAABAAEAAAAaAB4AAAABAAEAAAAeACAAAAAAAAIAAAAeACEAAAACAAEAAAAdACEAAAABAAIAAAAdACAAAAABAAAAAAAcACAAAAABAAAAAAAcACEAAAABAAIAAAAbACEAAAABAAIAAAAaACEAAAACAAAAAAAaADcAAAAAAAAAAAAaADYAAAAAAAEAAAAaADUAAAAAAAEAAAA=")
enabled = false

[node name="ButtonDoor3" parent="LevelMap" index="4"]
script = ExtResource("3_btgbj")

[node name="Sprite2D" parent="LevelMap/ButtonDoor3" index="0"]
position = Vector2(-506.002, 423.998)
frame = 0

[node name="Path2D" parent="LevelMap/ButtonDoor3" index="1"]
curve = SubResource("Curve2D_i4yh0")

[node name="DoorsLocked" parent="LevelMap/ButtonDoor3/Path2D/PathFollow2D" index="0"]
tile_map_data = PackedByteArray("AAAbACAAAAABAAAAAAAbAB8AAAAAAAIAAAAbAB4AAAAAAAIAAAAaACAAAAABAAEAAAAaAB8AAAABAAEAAAAaAB4AAAABAAEAAAAeACAAAAAAAAIAAAAeACEAAAACAAEAAAAdACEAAAABAAIAAAAdACAAAAABAAAAAAAcACAAAAABAAAAAAAcACEAAAABAAIAAAAbACEAAAABAAIAAAAaACEAAAACAAAAAAAaADcAAAAAAAAAAAAaADYAAAAAAAEAAAAaADUAAAAAAAEAAADf/zgAAAAAAAAAAADf/zcAAAAAAAEAAADf/zYAAAAAAAEAAADf/zUAAAAAAAEAAADf/zEAAAAAAAAAAADf/zAAAAAAAAEAAADf/y8AAAAAAAEAAADf/y4AAAAAAAEAAAA=")

[node name="TileMapLayer" parent="LevelMap" index="5"]
tile_map_data = PackedByteArray("AAAIACIAAQABAAEAAAAJACIAAQABAAEAAAAJACEAAQABAAEAAAAKACEAAQABAAEAAAALACEAAQABAAEAAAAMACEAAQABAAEAAAANACEAAQABAAEAAAANACIAAQABAAEAAAAOACIAAQABAAEAAAAPACIAAQABAAEAAAAQACEAAQABAAEAAAARACEAAQABAAEAAAARACAAAQABAAAAAAASACAAAQABAAAAAAATACAAAQABAAAAAAAUACAAAQACAAAAAAAZACIAAQAAAAEAAAAaACIAAQABAAEAAAAaACEAAQABAAEAAAAbACEAAQACAAEAAAAhACIAAQABAAEAAAAiACIAAQACAAEAAAAhACEAAQABAAEAAAAgACEAAQAAAAEAAAAiACMAAQACAAEAAAAiACEAAQACAAEAAAAiACAAAQACAAEAAAAiAB8AAQACAAEAAAAiAB4AAQABAAEAAAAiAB0AAQABAAEAAAAhACMAAQABAAEAAAAhACAAAQABAAEAAAAhAB8AAQAAAAEAAAAhAB4AAQAAAAEAAAAhAB0AAQAAAAEAAAAgACMAAQABAAEAAAAfACMAAQABAAAAAAAeACMAAQABAAAAAAAdACMAAQABAAAAAAAcACMAAQABAAAAAAAbACMAAQABAAEAAAAbACIAAQACAAEAAAAaACMAAQABAAEAAAAZACMAAQABAAEAAAAZACEAAQAAAAEAAAAYACMAAQABAAAAAAAXACMAAQABAAAAAAAWACMAAQABAAAAAAAVACMAAQABAAAAAAAUACMAAQABAAEAAAATACMAAQABAAEAAAATACIAAQABAAEAAAATACEAAQABAAEAAAASACMAAQABAAEAAAASACIAAQABAAEAAAASACEAAQABAAEAAAARACMAAQABAAEAAAARACIAAQABAAEAAAAQACMAAQABAAEAAAAQACIAAQABAAEAAAAPACMAAQABAAEAAAAPACEAAQABAAEAAAAOACMAAQABAAEAAAAOACEAAQABAAEAAAANACMAAQABAAEAAAAMACMAAQABAAEAAAAMACIAAQABAAEAAAALACMAAQABAAEAAAALACIAAQABAAEAAAAKACMAAQABAAEAAAAKACIAAQABAAEAAAAJACMAAQABAAEAAAAIACMAAQABAAEAAAAIACEAAQABAAEAAAAIACAAAQABAAEAAAAIAB8AAQACAAEAAAAIAB4AAQACAAEAAAAIAB0AAQACAAEAAAAHACMAAQAAAAEAAAAHACIAAQAAAAEAAAAHACEAAQAAAAEAAAAHACAAAQAAAAEAAAAHAB8AAQAAAAEAAAAHAB4AAQABAAEAAAAHAB0AAQABAAEAAAAIABwAAQACAAEAAAAIABsAAQACAAEAAAAIABoAAQACAAEAAAAIABkAAQACAAEAAAAIABgAAQACAAEAAAAIABcAAQACAAEAAAAIABYAAQABAAEAAAAIABUAAQABAAEAAAAIABQAAQABAAEAAAAIABMAAQABAAEAAAAIABIAAQABAAAAAAAHABwAAQABAAEAAAAHABsAAQABAAEAAAAHABoAAQABAAEAAAAHABkAAQABAAEAAAAHABgAAQABAAEAAAAHABcAAQABAAEAAAAHABYAAQABAAEAAAAHABUAAQABAAEAAAAHABQAAQABAAEAAAAHABMAAQABAAEAAAAHABIAAQABAAAAAAAGAB4AAQAAAAIAAAAGAB0AAQAAAAEAAAAGABwAAQAAAAEAAAAGABsAAQAAAAEAAAAGABoAAQAAAAEAAAAGABkAAQAAAAEAAAAGABgAAQAAAAEAAAAGABcAAQAAAAEAAAAGABYAAQAAAAEAAAAGABUAAQAAAAEAAAAGABQAAQABAAEAAAAGABMAAQABAAEAAAAGABIAAQABAAAAAAAjAB4AAQACAAIAAAAjAB0AAQACAAEAAAAjABwAAQACAAEAAAAjABsAAQACAAEAAAAjABoAAQACAAEAAAAjABkAAQACAAEAAAAjABgAAQACAAEAAAAjABcAAQACAAEAAAAjABYAAQACAAEAAAAjABUAAQACAAEAAAAjABQAAQABAAEAAAAjABMAAQABAAEAAAAjABIAAQABAAAAAAAiABwAAQABAAEAAAAiABsAAQABAAEAAAAiABoAAQABAAEAAAAiABkAAQABAAEAAAAiABgAAQABAAEAAAAiABcAAQABAAEAAAAiABYAAQABAAEAAAAiABUAAQABAAEAAAAiABQAAQABAAEAAAAiABMAAQABAAEAAAAiABIAAQABAAAAAAAhABsAAQAAAAEAAAAhABoAAQAAAAEAAAAhABkAAQAAAAEAAAAhABgAAQABAAEAAAAhABcAAQABAAEAAAAhABYAAQABAAEAAAAhABUAAQABAAEAAAAhABQAAQABAAEAAAAhABMAAQABAAEAAAAhABIAAQABAAAAAAAkABQAAQACAAIAAAAkABMAAQACAAEAAAAkABIAAQACAAAAAAAgABQAAQABAAEAAAAgABMAAQABAAEAAAAgABIAAQABAAAAAAAfABQAAQABAAEAAAAfABMAAQABAAEAAAAfABIAAQABAAAAAAAeABQAAQABAAEAAAAeABMAAQABAAEAAAAeABIAAQABAAAAAAAdABQAAQABAAEAAAAdABMAAQABAAEAAAAdABIAAQABAAAAAAAcABQAAQABAAEAAAAcABMAAQABAAEAAAAcABIAAQABAAAAAAAbABQAAQABAAEAAAAbABMAAQABAAEAAAAbABIAAQABAAAAAAAaABQAAQABAAEAAAAaABMAAQABAAEAAAAaABIAAQABAAAAAAAZABQAAQABAAEAAAAZABMAAQABAAEAAAAZABIAAQABAAAAAAAYABQAAQABAAEAAAAYABMAAQABAAEAAAAYABIAAQABAAAAAAAXABQAAQABAAEAAAAXABMAAQABAAEAAAAXABIAAQABAAAAAAAWABQAAQABAAEAAAAWABMAAQABAAEAAAAWABIAAQABAAAAAAAVABQAAQABAAEAAAAVABMAAQABAAEAAAAVABIAAQABAAAAAAAUABQAAQABAAEAAAAUABMAAQABAAEAAAAUABIAAQABAAAAAAATABQAAQABAAEAAAATABMAAQABAAEAAAATABIAAQABAAAAAAASABQAAQABAAEAAAASABMAAQABAAEAAAASABIAAQABAAAAAAARABQAAQABAAEAAAARABMAAQABAAEAAAARABIAAQABAAAAAAAQABQAAQABAAEAAAAQABMAAQABAAEAAAAQABIAAQABAAAAAAAPABQAAQABAAEAAAAPABMAAQABAAEAAAAPABIAAQABAAAAAAAOABQAAQABAAEAAAAOABMAAQABAAEAAAAOABIAAQABAAAAAAANABQAAQABAAEAAAANABMAAQABAAEAAAANABIAAQABAAAAAAAMABQAAQABAAEAAAAMABMAAQABAAEAAAAMABIAAQABAAAAAAALABQAAQABAAEAAAALABMAAQABAAEAAAALABIAAQABAAAAAAAKABQAAQABAAEAAAAKABMAAQABAAEAAAAKABIAAQABAAAAAAAJABQAAQABAAEAAAAJABMAAQABAAEAAAAJABIAAQABAAAAAAAFABQAAQAAAAIAAAAFABMAAQAAAAEAAAAFABIAAQAAAAAAAAAhABwAAQAAAAEAAAAbACAAAQACAAAAAAAaACAAAQABAAAAAAAZACAAAQAAAAAAAAAQACAAAQABAAAAAAAPACAAAQABAAAAAAAOACAAAQABAAAAAAANACAAAQABAAAAAAAMACAAAQABAAAAAAALACAAAQABAAAAAAAKACAAAQABAAAAAAAJACAAAQABAAAAAAAUACIAAQACAAEAAAAUACEAAQACAAEAAAAgACIAAQAAAAEAAAAgACAAAQAAAAAAAAAUABYAAQABAAIAAAAUABUAAQABAAEAAAATABYAAQABAAIAAAATABUAAQABAAEAAAASABYAAQABAAIAAAASABUAAQABAAEAAAARABYAAQABAAIAAAARABUAAQABAAEAAAAQABYAAQABAAIAAAAQABUAAQABAAEAAAAPABYAAQABAAIAAAAPABUAAQABAAEAAAAOABYAAQABAAIAAAAOABUAAQABAAEAAAANABYAAQABAAIAAAANABUAAQABAAEAAAAMABYAAQABAAIAAAAMABUAAQABAAEAAAALABYAAQABAAIAAAALABUAAQABAAEAAAAKABYAAQABAAIAAAAKABUAAQABAAEAAAAJABYAAQABAAIAAAAJABUAAQABAAEAAAAgABgAAQABAAIAAAAgABcAAQABAAEAAAAgABYAAQABAAEAAAAgABUAAQABAAEAAAAfABgAAQABAAIAAAAfABcAAQABAAEAAAAfABYAAQABAAEAAAAfABUAAQABAAEAAAAeABgAAQABAAIAAAAeABcAAQABAAEAAAAeABYAAQABAAEAAAAeABUAAQABAAEAAAAdABgAAQABAAIAAAAdABcAAQABAAEAAAAdABYAAQABAAEAAAAdABUAAQABAAEAAAAcABgAAQABAAIAAAAcABcAAQABAAEAAAAcABYAAQABAAEAAAAcABUAAQABAAEAAAAbABgAAQABAAIAAAAbABcAAQABAAEAAAAbABYAAQABAAEAAAAbABUAAQABAAEAAAAaABgAAQABAAIAAAAaABcAAQABAAEAAAAaABYAAQABAAEAAAAaABUAAQABAAEAAAAZABgAAQABAAIAAAAZABcAAQABAAEAAAAZABYAAQABAAEAAAAZABUAAQABAAEAAAAYABgAAQABAAIAAAAYABcAAQABAAEAAAAYABYAAQABAAEAAAAYABUAAQABAAEAAAAXABgAAQABAAIAAAAXABcAAQABAAEAAAAXABYAAQABAAEAAAAXABUAAQABAAEAAAAWABgAAQABAAIAAAAWABcAAQABAAEAAAAWABYAAQABAAEAAAAWABUAAQABAAEAAAAVABgAAQAAAAIAAAAVABcAAQAAAAEAAAAVABYAAQABAAEAAAAVABUAAQABAAEAAAAiACcAAQACAAIAAAAiACYAAQACAAEAAAAiACUAAQACAAEAAAAiACQAAQACAAEAAAAhACcAAQABAAIAAAAhACYAAQABAAEAAAAhACUAAQABAAEAAAAhACQAAQABAAEAAAAgACcAAQABAAIAAAAgACYAAQABAAEAAAAgACUAAQABAAEAAAAgACQAAQABAAEAAAAfACcAAQABAAIAAAAfACYAAQABAAEAAAAfACUAAQABAAEAAAAfACQAAQABAAEAAAAeACcAAQABAAIAAAAeACYAAQABAAEAAAAeACUAAQABAAEAAAAeACQAAQABAAEAAAAdACcAAQABAAIAAAAdACYAAQABAAEAAAAdACUAAQABAAEAAAAdACQAAQABAAEAAAAcACcAAQABAAIAAAAcACYAAQABAAEAAAAcACUAAQABAAEAAAAcACQAAQABAAEAAAAbACcAAQABAAIAAAAbACYAAQABAAEAAAAbACUAAQABAAEAAAAbACQAAQABAAEAAAAaACcAAQABAAIAAAAaACYAAQABAAEAAAAaACUAAQABAAEAAAAaACQAAQABAAEAAAAZACcAAQABAAIAAAAZACYAAQABAAEAAAAZACUAAQABAAEAAAAZACQAAQABAAEAAAAYACcAAQABAAIAAAAYACYAAQABAAEAAAAYACUAAQABAAEAAAAYACQAAQABAAEAAAAXACcAAQABAAIAAAAXACYAAQABAAEAAAAXACUAAQABAAEAAAAXACQAAQABAAEAAAAWACcAAQABAAIAAAAWACYAAQABAAEAAAAWACUAAQABAAEAAAAWACQAAQABAAEAAAAVACcAAQABAAIAAAAVACYAAQABAAEAAAAVACUAAQABAAEAAAAVACQAAQABAAEAAAAUACcAAQABAAIAAAAUACYAAQABAAEAAAAUACUAAQABAAEAAAAUACQAAQABAAEAAAATACcAAQABAAIAAAATACYAAQABAAEAAAATACUAAQABAAEAAAATACQAAQABAAEAAAASACcAAQABAAIAAAASACYAAQABAAEAAAASACUAAQABAAEAAAASACQAAQABAAEAAAARACcAAQABAAIAAAARACYAAQABAAEAAAARACUAAQABAAEAAAARACQAAQABAAEAAAAQACcAAQABAAIAAAAQACYAAQABAAEAAAAQACUAAQABAAEAAAAQACQAAQABAAEAAAAPACcAAQABAAIAAAAPACYAAQABAAEAAAAPACUAAQABAAEAAAAPACQAAQABAAEAAAAOACcAAQABAAIAAAAOACYAAQABAAEAAAAOACUAAQABAAEAAAAOACQAAQABAAEAAAANACcAAQABAAIAAAANACYAAQABAAEAAAANACUAAQABAAEAAAANACQAAQABAAEAAAAMACcAAQABAAIAAAAMACYAAQABAAEAAAAMACUAAQABAAEAAAAMACQAAQABAAEAAAALACcAAQABAAIAAAALACYAAQABAAEAAAALACUAAQABAAEAAAALACQAAQABAAEAAAAKACcAAQABAAIAAAAKACYAAQABAAEAAAAKACUAAQABAAEAAAAKACQAAQABAAEAAAAJACcAAQABAAIAAAAJACYAAQABAAEAAAAJACUAAQABAAEAAAAJACQAAQABAAEAAAAIACcAAQABAAIAAAAIACYAAQABAAEAAAAIACUAAQABAAEAAAAIACQAAQABAAEAAAAHACcAAQAAAAIAAAAHACYAAQAAAAEAAAAHACUAAQAAAAEAAAAHACQAAQAAAAEAAAA=")

[node name="VIEWPORT_SIZE_TEMP" parent="LevelMap" index="6"]
position = Vector2(210, 235)

[node name="Spring" parent="LevelMap" index="7"]
process_mode = 4
visible = false
position = Vector2(194, 240)
metadata/_edit_group_ = true

[node name="Exit" parent="LevelMap" index="8"]
position = Vector2(364, 279)
metadata/_edit_group_ = true

[connection signal="body_shape_entered" from="LevelMap/ButtonDoor1/Sprite2D/Area2D" to="LevelMap/ButtonDoor1" method="_on_area_2d_body_shape_entered"]

[editable path="LevelMap"]
